syntax = "proto3";
package common.v1;
option go_package = "github.com/igorrmotta/api-corestack/services/golang/gen/common/v1;commonv1";

message PaginationRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message PaginationResponse {
  string next_page_token = 1;
  int32 total_count = 2;
}
